# neural-network

./: .editorconfig  .gitignore  Activations.cpp  Activations.hpp  CMakeLists.txt  Functions.cpp  Functions.hpp  Layer.cpp  Layer.hpp  Linalg.cpp  Linalg.hpp  Main.cpp  Matrix.cpp  Matrix.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  README.md  backpropagation.md  build.sh  linalg.cpp  makefile  mnist.txt  neuron.cpp
